--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,13 @@
         </activity>
         <activity android:name=".Main2Activity" />
         <activity android:name=".Main3Activity"></activity>
+        <service
+            android:name="BlueConnect"
+            android:icon="@drawable/connection_button"
+            android:label="BlueService"
+            >
+        </service>
     </application>
+
 
 </manifest>
