--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,16 +20,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MenuScreen" />
-        <activity android:name=".Leds" />
+        <activity android:name=".MenuScreen" android:label="MAIN MENU"/>
+        <activity android:name=".Leds" android:label="LED"/>
 
         <service
             android:name=".BlueServer"
             android:icon="@drawable/connection_button"
             android:label="BlueService" />
 
-        <activity android:name=".Lights" />
-        <activity android:name=".Safety"></activity>
+        <activity android:name=".Lights" android:label="LIGHTS" />
+        <activity android:name=".Safety" android:label="PARKING"></activity>
     </application>
 
 </manifest>
