--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,16 +19,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MenuScreen" android:label="MAIN MENU"/>
-        <activity android:name=".Leds" android:label="LED" android:parentActivityName=".MenuScreen"/>
+        <activity android:name=".MenuScreen" android:label="@string/main_menu"/>
+        <activity android:name=".Leds" android:label="@string/led" android:parentActivityName=".MenuScreen"/>
 
         <service
             android:name=".BlueServer"
             android:icon="@drawable/connection_button"
             android:label="BlueService" />
 
-        <activity android:name=".Lights" android:label="LIGHTS" android:parentActivityName=".MenuScreen"/>
-        <activity android:name=".Safety" android:label="PARKING" android:parentActivityName=".MenuScreen"></activity>
+        <activity android:name=".Lights" android:label="@string/lights" android:parentActivityName=".MenuScreen"/>
+        <activity android:name=".Safety" android:label="@string/parking" android:parentActivityName=".MenuScreen"></activity>
     </application>
 
 </manifest>
