fixen van michiel zijn fouten

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
         <activity
             android:name=".Help"
             android:label="Help"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            android:theme="@style/ConnectAppTheme">
+
         </activity>
     </application>
 
